--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
+  
   "name": "ilc-site",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://yourusername.github.io/serial-communication",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -37,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "concurrently": "^8.2.2",
     "gh-pages": "^6.1.1"
   }
 }
