removed local host

--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "version": "0.1.0",
   "private": true,
   "homepage": "https://yourusername.github.io/serial-communication",
-  "proxy": "http://localhost:3001",
 
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -20,6 +19,7 @@
   "scripts": {
     "start": "concurrently \"npm start --prefix backend\" \"react-scripts start\"",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
